--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=960, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
   <script src="gengou.js"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <canvas id="canvas" width="1920" height="1080"></canvas>
+    <canvas id="canvas"></canvas>
     <div class="buttons">
       <button onclick="direction-=1">逆再生加速</button>
       <button onclick="direction=-1">逆再生</button>
